@@ -1,0 +1,4 @@
+<h2>Gestion des droits</h2>
+<?php
+
+?>
